<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_status">Status</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donut_description">to become fat as a cop</string>
    <string name="icecream_sandwitch_description">Kinder\'s biggest flop</string>
    <string name="froyo_description">light and sweet</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order_description">order:</string>
    <string name="next_day_description">Next day ground delivery</string>
    <string name="pick_up_description">Pick up</string>
    <string name="same_day_description">Same day messenger service</string>
    <string name="hint_your_comment">your comment</string>
    <string name="label_note">note</string>
    <string name="hint_your_phone">your phone</string>
    <string name="label_phone">phone</string>
    <string name="hint_your_name">your name</string>
    <string name="label_address">address</string>
    <string name="hint_your_address">your address</string>
    <string name="label_name">name</string>
    <string name="choose_your_delivery_mode_textView">Choose your delivery mode</string>
    <string name="favorite_title">favorite</string>
    <string name="order_title">Order</string>
    <string name="contact_title">Contact</string>
    <string name="order_action">You selected order</string>
    <string name="status_action">You selected status action</string>
    <string name="favorite_action">You selected favorite action</string>
    <string name="contact_action">You selected contact action</string>
    <string name="order_activity_title">Order Activity</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
