<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_textView"
            android:text="@string/order_description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp"
    />
    <TextView
            android:text="@string/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/order_textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_editText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_textView"
            android:hint="@string/hint_your_name" app:layout_constraintStart_toStartOf="@+id/address_editText"
    />
    <TextView
            android:text="@string/label_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address_textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/name_textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textPostalAddress"
            android:ems="10"
            android:id="@+id/address_editText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/address_textView"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/address_textView"
            android:hint="@string/hint_your_address"/>
    <TextView
            android:text="@string/label_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/address_textView"/>
    <EditText
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_editText"
            app:layout_constraintStart_toEndOf="@+id/address_textView"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:hint="@string/hint_your_phone" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/address_editText"/>
    <TextView
            android:text="@string/label_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/note_textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:ems="10"
            android:id="@+id/note_editText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/note_textView"
            android:hint="@string/hint_your_comment"
            app:layout_constraintStart_toStartOf="@+id/address_editText"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/delivery_textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
        <RadioButton
                android:id="@+id/sameday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/same_day_description"
        />
        <RadioButton
                android:id="@+id/nextday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/next_day_description"
                android:checked="true"/>
        <RadioButton
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pick_up_description"/>
    </RadioGroup>
    <TextView
            android:text="@string/choose_your_delivery_mode_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/delivery_textView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/note_editText"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_spinner"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/address_editText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phone_editText" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="24dp" android:layout_marginRight="24dp"/>

</android.support.constraint.ConstraintLayout>
