<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/text_intro_textview"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/donut_circle"
            android:id="@+id/donut_imageView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/text_intro_textview" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            android:contentDescription="@string/donut_description"
            android:onClick="orderDonut"
    />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/icecream_circle"
            android:id="@+id/icecream_sandwitch_imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
            android:contentDescription="@string/icecream_sandwitch_description"
            android:onClick="orderIcecreamSandwitch"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/donut_imageView"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/froyo_circle"
            android:id="@+id/froyo_imageView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/icecream_sandwitch_imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            android:contentDescription="@string/froyo_description"
            android:onClick="orderFroyo"
    />
    <TextView
            android:text="@string/donut_description"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:id="@+id/donut_description" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/donut_imageView"
            app:layout_constraintStart_toEndOf="@+id/donut_imageView" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/icecream_sandwitch_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/icrecream_sandwitch_description" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/icecream_sandwitch_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icecream_sandwitch_imageView" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginRight="24dp"/>
    <TextView
            android:text="@string/froyo_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/froyo_description" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/froyo_imageView"
            app:layout_constraintStart_toEndOf="@+id/froyo_imageView" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"/>

</android.support.constraint.ConstraintLayout>